update tutorial notebook with new functions

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -220,9 +220,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The functions that starts with the preffix `list_` shown above are supposed to be used on Jupyter Notebooks (or similar). They only display lists and do not return any value. The funtions that starts with the preffix `get_` return data (or metadata) retrieved from the PZ Server, so they can attribute the results to a variable.    \n",
     "\n",
     "---\n",
-    "\n",
     "\n",
     "In the cells below, let's see examples of usage organized by product types. "
    ]
@@ -277,7 +277,7 @@
     "\n",
     "All data products stored on PZ Server are identified by a unique number, the product **id**. This number is the only information required to access the data or the corresponding metadata. \n",
     "\n",
-    "The function `pz_server.get_product_metadata(<id>)` returns _DataFrame_ with all the attibutes stored in the PZ Server about a given data product identified by its **id** number."
+    "The function `get_product_metadata(<id>)` returns displays (optional) and returns (as a dictionary) the attibutes stored in the PZ Server about a given data product identified by its **id** number."
    ]
   },
   {
@@ -300,12 +300,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata_specz_catalog"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Retrieve a given Spec-z Catalog \n",
     "\n",
-    "The function `pz_server.get_product()` returns the Spec-z Catalog of interest as a _Pandas DataFrame_ by default.  "
+    "The function `get_product()` returns the Spec-z Catalog of interest as a _Pandas DataFrame_ by default. The available data types are those supported by the Python library [**tables_io**](https://github.com/LSSTDESC/tables_io).     "
    ]
   },
   {
