function get_product done, tutorial notebook done up to spec-z catalaog

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "All data products stored on PZ Server are identified by a unique number, the product **id**. This number is the only information required to access the data or the corresponding metadata. \n",
     "\n",
-    "The function `get_product_metadata(<id>)` returns displays (optional) and returns (as a dictionary) the attibutes stored in the PZ Server about a given data product identified by its **id** number."
+    "The function `get_product_metadata(<id>)` displays (optional) and returns (as a dictionary) the attibutes stored in the PZ Server about a given data product identified by its **id** number."
    ]
   },
   {
@@ -296,15 +296,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(metadata_specz_catalog)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "metadata_specz_catalog"
    ]
   },
@@ -314,7 +305,7 @@
    "source": [
     "#### Retrieve a given Spec-z Catalog \n",
     "\n",
-    "The function `get_product()` returns the Spec-z Catalog of interest as a _Pandas DataFrame_ by default. The available data types are those supported by the Python library [**tables_io**](https://github.com/LSSTDESC/tables_io).     "
+    "The function `get_product()` returns the Spec-z Catalog of interest as a _Pandas DataFrame_."
    ]
   },
   {
@@ -327,7 +318,7 @@
    "outputs": [],
    "source": [
     "#specz_catalog = pz_server.get_product(<product id number>)\n",
-    "specz_catalog = pz_server.get_product(6, save_file=False)\n",
+    "specz_catalog = pz_server.get_product(6)\n",
     "specz_catalog"
    ]
   },
@@ -361,6 +352,22 @@
    "outputs": [],
    "source": [
     "pz_plots.specz_plots(specz_catalog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default, the function `get_product` just return the data to be used on memory. To store the results in a file, inform the file name to be saved in the **save_file_as** argument. The file formats supported are CSV (default, in case of no suffix), plus those supported by the Python library [**tables_io**](https://github.com/LSSTDESC/tables_io), i.e., those with suffixes: 'fits', 'hf5', 'hdf5', 'fit', 'h5', and 'pq'.   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specz_catalog = pz_server.get_product(6, save_file_as=\"example_specz_cat.csv\")"
    ]
   },
   {
