separate list functions in two groups: fetch and display

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -35,11 +35,10 @@
    "source": [
     "### Installation\n",
     "\n",
-    "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type:  \n",
+    "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type, on your Terminal:  \n",
     "\n",
     "<font style=\"background-color:black; color:white;\" face=\"Courier New\"> $ pip install pz-server-lib </font>  \n",
-    "\n",
-    "on your Terminal. \n"
+    "\n"
    ]
   },
   {
@@ -56,7 +55,7 @@
    "outputs": [],
    "source": [
     "from pz_server import PzServer, pz_plots\n",
-    "import pandas as pd\n",
+    "#import pandas as pd\n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -100,7 +99,7 @@
    "source": [
     "### Get basic info from PZ Server\n",
     "\n",
-    "The object `pz_server` provides useful functions for users to navigate through the available contents. All the functions return tables stored in _[Pandas DataFrames](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)_ for the sake of having an easy-to-read display mode. For instance:\n",
+    "Besides providing access to data and metadata, the object `pz_server` also brings useful functions for users to navigate through the available contents. The functions with the preffix \"fetch_\" return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically out of the Jupyter environment (see the API documentatio here). Those with the preffix \"display_\" just show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html). For instance:\n",
     "\n",
     "Display the list of product types supported with a short description;"
    ]
@@ -111,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_product_types()      "
+    "pz_server.display_product_types()"
    ]
   },
   {
@@ -127,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_users()"
+    "pz_server.display_users()"
    ]
   },
   {
@@ -143,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_releases()"
+    "pz_server.display_releases()"
    ]
   },
   {
@@ -163,7 +162,7 @@
    },
    "outputs": [],
    "source": [
-    "pz_server.list_products() "
+    "pz_server.display_products_list() "
    ]
   },
   {
@@ -179,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"release\": \"LSST DP0\", \n",
+    "pz_server.display_products_list(filters={\"release\": \"LSST DP0\", \n",
     "                                 \"product_type\": \"Spec-z Catalog\",\n",
     "                                 \"uploaded_by\": \"Gschwend\"})"
    ]
@@ -197,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"release\": \"DP0\"})"
+    "pz_server.display_products_list(filters={\"release\": \"DP0\"})"
    ]
   },
   {
@@ -213,18 +212,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"product_type__or\": [\"train\", \"valid\"]})"
+    "pz_server.display_products_list(filters={\"product_type__or\": [\"train\", \"valid\"]})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The functions that starts with the preffix `list_` shown above are supposed to be used on Jupyter Notebooks (or similar). They only display lists and do not return any value. The funtions that starts with the preffix `get_` return data (or metadata) retrieved from the PZ Server, so they can attribute the results to a variable.    \n",
+    "To fetch the results of a search and attribute to a variable, just change the preffix \"display_\" by \"fetch_\", like this:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_results = pz_server.fetch_products_list(filters={\"product_type__or\": [\"train\", \"valid\"]})\n",
+    "search_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "---\n",
     "\n",
-    "In the cells below, let's see examples of usage organized by product types. "
+    "The next group of functions, which starts with the preffixes \"get_\" and \"download_\" return data (or metadata) retrieved from the PZ Server. In the cells below, let's see examples of usage organized by product types. "
    ]
   },
   {
@@ -235,7 +251,7 @@
    "source": [
     "## 1. Spec-z Catalog \n",
     "\n",
-    "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources and should be provided as a single file to PZ Server's the upload tool. \n",
+    "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources and should be provided as a single file with tabular data to PZ Server's the upload tool. \n",
     "\n",
     "Mandatory columns: \n",
     "* Right ascension [degrees] - `float`\n",
@@ -259,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"product_type\": \"Spec-z Catalog\"})"
+    "pz_server.display_products_list(filters={\"product_type\": \"Spec-z Catalog\"})"
    ]
   },
   {
@@ -288,6 +304,15 @@
    "source": [
     "#metadata_specz_catalog = pz_server.get_product_metadata(<product id number>) \n",
     "metadata_specz_catalog = pz_server.get_product_metadata(6) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input -> usar internal name (dar as duas opções)"
    ]
   },
   {
@@ -342,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quick visualization of spec-z catalog properties"
+    "The `pz_server` library brings a couple of very basic in-built plot functions for a quick visualization of spec-z catalog, training and validation sets properties. "
    ]
   },
   {
@@ -358,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the function `get_product` just return the data to be used on memory. To store the results in a file, inform the file name to be saved in the **save_file_as** argument. The file formats supported are CSV (default, in case of no suffix), plus those supported by the Python library [**tables_io**](https://github.com/LSSTDESC/tables_io), i.e., those with suffixes: 'fits', 'hf5', 'hdf5', 'fit', 'h5', and 'pq'.   "
+    "By default, the function `get_product` just return the data to be used on memory. To store the results in a file, inform the file name to be saved in the **save_file_as** argument. The file formats supported are CSV, and those supported by the Python library [**tables_io**](https://github.com/LSSTDESC/tables_io), i.e., those with suffixes: 'fits', 'hf5', 'hdf5', 'fit', 'h5', and 'pq'.   "
    ]
   },
   {
@@ -374,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training and Validation Sets \n",
+    "## 2. Training and Validation Sets \n",
     "#### List Training and Validation Sets available on Pz Server\n",
     "\n",
     "Training and Validation (or Test) Sets are the product of matching (spatially) a given Spec-z Catalog (single survey or compilation) to the photometric data, in this case, the LSST Objects Catalog. In fact, in most cases, the Training and Validation Sets are just the result of splitting the product of matching into two parts. Hence, the Training and Validation Sets are usually found together. In the case of simulations, the Training and Validation Sets can be just a selection from the simulated catalog that contains the true redshifts and the photometric data required to train and validate the photo-z algorithms.\n",
@@ -415,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"product type\": \"Training Set\"})"
+    "pz_server.list_products(filters={\"product_type\": \"Training Set\"})"
    ]
   },
   {
@@ -424,7 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"product type\": \"Validation Set\"})"
+    "pz_server.list_products(filters={\"product_type\": \"Validation Set\"})"
    ]
   },
   {
@@ -440,8 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_train_set = pz_server.get_product_metadata(9)\n",
-    "metadata_train_set "
+    "metadata_train_set = pz_server.get_product_metadata(9)"
    ]
   },
   {
@@ -462,6 +486,30 @@
    "source": [
     "train_set = pz_server.get_product(9)\n",
     "train_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import tables_io\n",
+    "import pandas as pd\n",
+    "# from astropy.io import fits#Tabl\n",
+    "#import numpy as np\n",
+    "#train_set = pd.read_csv(\"/Users/julia/Desktop/tmp/dp0_tiny_train_random.csv\")#, delimiter=\",\", comments=\"#\", skiprows=1)\n",
+    "train_set = pd.read_csv(\"/Users/julia/Desktop/tmp/example_train_dp0_dered.csv\", low_memory=False)#, delimiter=\",\", comments=\"#\", skiprows=1)\n",
+    "train_set "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set.dtypes"
    ]
   },
   {
@@ -493,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_plots.train_valid_plots(train=train_set) "
+    "pz_plots.train_valid_plots(train=train_set)#, mag_name=\"mag_i\", redshift_name=\"z_true\")"
    ]
   },
   {
@@ -509,7 +557,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valid_set = pz_server.get_product(10)"
+    "#valid_set = pz_server.get_product(10)\n",
+    "valid_set = pd.read_csv(\"/Users/julia/Desktop/tmp/example_valid_dp0_dered.csv\",low_memory=False)#, delimiter=\",\", comments=\"#\", skiprows=1)"
    ]
   },
   {
@@ -518,14 +567,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_plots.train_valid_plots(train=train_set, valid=valid_set) "
+    "pz_plots.train_valid_plots(train=train_set, valid=valid_set, savefig=True) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Photo-z Validation Results\n",
+    "## 4. Photo-z Validation Results\n",
     "\n",
     "Validation Results are the outputs of any photo-z algorithm applied on a Validation Set. The format and number of files of this data product are strongly dependent on the algorithm used to create it, so there are no constraints on these two parameters. In the case of multiple files, for instance, if the user includes the results of training procedures (e.g., neural nets weights, decision trees files, or any machine learning by-product) or additional files (SED templates, filter transmission curves, theoretical magnitudes grid, Bayesian priors, etc.), it will be required to put all files together in a single compressed file (.zip or .tar) before uploading it to the Photo-z Server.   \n",
     "\n",
@@ -538,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={\"product type\": \"Validation Results\"})"
+    "pz_server.list_products(filters={\"product_type\": \"Validation Results\"})"
    ]
   },
   {
@@ -554,8 +603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_valid_results = pz_server.get_product_metadata(99)\n",
-    "metadata_valid_results"
+    "metadata_valid_results = pz_server.get_product_metadata(99)"
    ]
   },
   {
@@ -573,7 +621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_result = pz_server.get_product(product_id=\"0006\", save_file=\"True\")\n",
+    "pz_result = pz_server.get_product(99)\n",
     "pz_result # string tar file name"
    ]
   },
@@ -581,9 +629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Basic Photo-z Validation Plots\n",
-    "\n",
-    "If the photo-z results were originated from a run of [RAIL](https://github.com/LSSTDESC/RAIL) Estimation module, we can use directly the plots fuctions from RAIL Evaluation module.\n"
+    "## 5. Photo-z   "
    ]
   },
   {
@@ -591,9 +637,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#  open .tar file "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -601,55 +645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from RAIL.examples.evaluation.utils import *\n",
-    "from RAIL.rail.evaluation.metrics.pit import *\n",
-    "from RAIL.rail.evaluation.metrics.cdeloss import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_path = 'xxx/xxx/xx' \n",
-    "pdfs_file =  os.path.join(my_path, \"pdfs_FZBoost.hdf5\")\n",
-    "ztrue_file =  os.path.join(my_path, \"ztrue_validation_set.hdf5\")\n",
-    "pdfs, zgrid, ztrue, photoz_mode = read_pz_output(pdfs_file, ztrue_file) # all numpy arrays"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot PIT-QQ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_pit_qq(pdfs, zgrid, ztrue, title=\"PIT-QQ - toy data\", code=\"FZBoost\",\n",
-    "                pit_out_rate=pit_out_rate, savefig=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "PZ Validation metrics table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary = Summary(pdfs, zgrid, ztrue)\n",
-    "summary.markdown_metrics_table(pitobj=pitobj) # pitobj as optional input to speed-up metrics evaluation"
+    "download -> descompactar "
    ]
   }
  ],
