rename functions fetch -> get

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "### Get basic info from PZ Server\n",
     "\n",
-    "Besides providing access to data and metadata, the object `pz_server` also brings useful functions for users to navigate through the available contents. The functions with the preffix \"fetch_\" return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically out of the Jupyter environment (see the API documentatio here). Those with the preffix \"display_\" just show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html). For instance:\n",
+    "Besides providing access to data and metadata, the object `pz_server` also brings useful functions for users to navigate through the available contents. The functions with the preffix \"get_\" return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically out of the Jupyter environment (see the API documentatio here). Those with the preffix \"display_\" just show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html). For instance:\n",
     "\n",
     "Display the list of product types supported with a short description;"
    ]
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_results = pz_server.fetch_products_list(filters={\"product_type__or\": [\"train\", \"valid\"]})\n",
+    "search_results = pz_server.get_products_list(filters={\"product_type__or\": [\"train\", \"valid\"]})\n",
     "search_results"
    ]
   },
@@ -240,7 +240,8 @@
     "\n",
     "---\n",
     "\n",
-    "The next group of functions, which starts with the preffixes \"get_\" and \"download_\" return data (or metadata) retrieved from the PZ Server. In the cells below, let's see examples of usage organized by product types. "
+    "Next, let's see examples of usage of the functions that starts with the preffixes \"get_\" and \"download_\" to retrie data (or metadata),  organized by product types. \n",
+    "\n"
    ]
   },
   {
@@ -289,11 +290,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the website or this way, using the Python API. \n",
+    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page, or this way, using the Python API. \n",
     "\n",
-    "All data products stored on PZ Server are identified by a unique number, the product **id**. This number is the only information required to access the data or the corresponding metadata. \n",
+    "All data products stored on PZ Server are identified by a unique number, the product **id** number, or by a _string_ called **internal_name**, which is created automatically by concatenating the product **id** to the product name given by its owner and removing blank spaces, upper cases, and special charecters. \n",
     "\n",
-    "The function `get_product_metadata(<id>)` displays (optional) and returns (as a dictionary) the attibutes stored in the PZ Server about a given data product identified by its **id** number."
+    "The function `get_product_metadata()` returns (as a dictionary) the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name**."
    ]
   },
   {
@@ -302,26 +303,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#metadata_specz_catalog = pz_server.get_product_metadata(<product id number>) \n",
-    "metadata_specz_catalog = pz_server.get_product_metadata(6) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input -> usar internal name (dar as duas opções)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# metadata_specz_catalog = pz_server.get_product_metadata(<id number or internal name, str or int>) \n",
+    "# metadata_specz_catalog = pz_server.get_product_metadata(6) \n",
+    "# metadata_specz_catalog = pz_server.get_product_metadata(\"6\")  \n",
+    "metadata_specz_catalog = pz_server.get_product_metadata(\"6_true_redshifts\") \n",
     "metadata_specz_catalog"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the previous \"get_\" functions, there is a correspondent \"display_\" function for the product metadata: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.display_product_metadata(\"6_true_redshifts\") "
    ]
   },
   {
