update notebook text

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -35,10 +35,11 @@
    "source": [
     "### Installation\n",
     "\n",
-    "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type, on your Terminal:  \n",
+    "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type, on the Terminal:  \n",
     "\n",
     "<font style=\"background-color:black; color:white;\" face=\"Courier New\"> $ pip install pz-server-lib </font>  \n",
-    "\n"
+    "\n",
+    "You might need to restart the kernel on the notebook to incorporate the new library. "
    ]
   },
   {
