--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -35,11 +35,30 @@
    "source": [
     "### Installation\n",
     "\n",
+    "#### Via pip\n",
+    "\n",
     "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type, on the Terminal:  \n",
     "\n",
-    "<font style=\"background-color:black; color:white;\" face=\"Courier New\"> $ pip install pz-server-lib </font>  \n",
+    "```shell\n",
+    "$ pip install pz-server-lib \n",
+    "``` \n",
     "\n",
-    "You might need to restart the kernel on the notebook to incorporate the new library. "
+    "#### Via setup.py \n",
+    "\n",
+    "Alternatively, if you have cloned the repository with:\n",
+    "\n",
+    "```shell\n",
+    "$ git clone https://github.com/linea-it/pz-server-lib.git  \n",
+    "``` \n",
+    "\n",
+    "To install the API and its dependencies, type:\n",
+    "\n",
+    "```shell\n",
+    "$ python setup.py --install\n",
+    "```\n",
+    "\n",
+    "\n",
+    "OBS: You might need to restart the kernel on the notebook to incorporate the new library. \n"
    ]
   },
   {
@@ -56,7 +75,6 @@
    "outputs": [],
    "source": [
     "from pz_server import PzServer, pz_plots\n",
-    "#import pandas as pd\n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -610,9 +628,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pz-server",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pz-server"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -624,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.5"
   },
   "vscode": {
    "interpreter": {
