--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. \n",
     "\n",
-    "For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs.\n"
+    "For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pz-server-lib/html/index.html).  \n"
    ]
   },
   {
@@ -83,8 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The connection with the PZ Server from Python code is done by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [PZ Server website](https://pz-server-dev.linea.org.br/). \n",
-    "<font color=red> to do: check link URL </font>"
+    "The connection with the PZ Server from Python code is done by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [PZ Server website](https://pz-server.linea.org.br/). "
    ]
   },
   {
@@ -101,6 +100,15 @@
    "outputs": [],
    "source": [
     "pz_server = PzServer(token=\"<paste your API Token here>\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server = PzServer(token=\"f89e5ebb63dd4017dc17963196e3c689c000d700\", host=\"pz-dev\") "
    ]
   },
   {
@@ -628,9 +636,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pz-server",
    "language": "python",
-   "name": "python3"
+   "name": "pz-server"
   },
   "language_info": {
    "codemirror_mode": {
@@ -642,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.0"
   },
   "vscode": {
    "interpreter": {
