--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. \n",
     "\n",
-    "For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs.\n"
+    "For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pz-server-lib/html/index.html).  \n"
    ]
   },
   {
@@ -35,11 +35,30 @@
    "source": [
     "### Installation\n",
     "\n",
+    "#### Via pip\n",
+    "\n",
     "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type, on the Terminal:  \n",
     "\n",
-    "<font style=\"background-color:black; color:white;\" face=\"Courier New\"> $ pip install pz-server-lib </font>  \n",
+    "```shell\n",
+    "$ pip install pz-server-lib \n",
+    "``` \n",
     "\n",
-    "You might need to restart the kernel on the notebook to incorporate the new library. "
+    "#### Via setup.py \n",
+    "\n",
+    "Alternatively, if you have cloned the repository with:\n",
+    "\n",
+    "```shell\n",
+    "$ git clone https://github.com/linea-it/pz-server-lib.git  \n",
+    "``` \n",
+    "\n",
+    "To install the API and its dependencies, type:\n",
+    "\n",
+    "```shell\n",
+    "$ python setup.py --install\n",
+    "```\n",
+    "\n",
+    "\n",
+    "OBS: You might need to restart the kernel on the notebook to incorporate the new library. \n"
    ]
   },
   {
@@ -51,12 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pz_server import PzServer, pz_plots\n",
-    "#import pandas as pd\n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -65,8 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The connection with the PZ Server from Python code is done by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [PZ Server website](https://pz-server-dev.linea.org.br/). \n",
-    "<font color=red> to do: check link URL </font>"
+    "The connection with the PZ Server from Python code is done by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [PZ Server website](https://pz-server.linea.org.br/). "
    ]
   },
   {
@@ -82,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server = PzServer(token=\"<paste your API Token here>\") "
+    "pz_server = PzServer(token=\"<paste your API Token here>\", host=\"pz-dev\") # temporary host for test phase  "
    ]
   },
   {
@@ -570,9 +587,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'success': False,\n",
+       " 'message': 'Request Error: Expecting value: line 1 column 1 (char 0)'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pz_server.download_product(21)"
    ]
