fix wrong command in documentation

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -54,7 +54,7 @@
     "To install the API and its dependencies, type:\n",
     "\n",
     "```shell\n",
-    "$ python setup.py --install\n",
+    "$ python setup.py install\n",
     "```\n",
     "\n",
     "\n",
