--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Contact author**: Julia Gschwend ([julia@linea.org.br](mailto:julia@linea.org.br)) \n",
     "\n",
-    "**Last verified run**: 2022-10-28 <br>\n",
+    "**Last verified run**: 2022-11-07 <br>\n",
     "\n"
    ]
   },
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "## 0. Introduction\n",
-    "The Photo-z (PZ) Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website https://pz-server.linea.org.br/. There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. **The registered data products can also be accessed directly from Python code using the PZ Server's data access API, as demonstrated below.**\n",
+    "The Photo-z (PZ) Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website https://pz-server.linea.org.br/ (during the test phase, the test environment is available at https://pz-server-dev.linea.org.br/). There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. **The registered data products can also be accessed directly from Python code using the PZ Server's data access API, as demonstrated below.**\n",
     "\n",
     "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. \n",
     "\n",
@@ -54,7 +54,7 @@
     "To install the API and its dependencies, type:\n",
     "\n",
     "```shell\n",
-    "$ python setup.py --install\n",
+    "$ python setup.py install\n",
     "```\n",
     "\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.display_product_metadata(21)"
+    "pz_server.display_product_metadata(\"21_pz_validation_goldenspike_fzboost\")"
    ]
   },
   {
@@ -587,23 +587,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'success': False,\n",
-       " 'message': 'Request Error: Expecting value: line 1 column 1 (char 0)'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pz_server.download_product(21)"
+    "pz_server.download_product(21, save_in=\".\")"
    ]
   },
   {
@@ -617,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Photo-z Tables are the results of photo-z estimation on photometrics samples. The size limit for uploading files on the PZ Server is 200MB, therefore it does not support large Photo-z Tables such as the photo-zs of the LSST Objects catalog. Instead, the PZ Server can host only Photo-z Tables of small data sets."
+    "The Photo-z Tables are the results of photo-z estimation on photometrics samples. The size limit for uploading files on the PZ Server is 200MB, therefore it does not support large Photo-z Tables such as the photo-zs of the LSST Objects catalog. Instead, the PZ Server can host only Photo-z Tables of small data sets. "
    ]
   },
   {
@@ -639,9 +627,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pz-server",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pz-server"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -653,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.5"
   },
   "vscode": {
    "interpreter": {
