remove forgotten api token and fix broken image path

--- a/nb/pz_server_tutorial.ipynb
+++ b/nb/pz_server_tutorial.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"./images/ScreenShotTokenGenerator.png\" width=300pt/>"
+    "<img src=\"../images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"../images/ScreenShotTokenGenerator.png\" width=300pt/>"
    ]
   },
   {
@@ -98,15 +98,6 @@
    "outputs": [],
    "source": [
     "pz_server = PzServer(token=\"<paste your API Token here>\", host=\"pz-dev\") # temporary host for test phase  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_server = PzServer(token=\"90bfd2169412c7fdb9f545e7f165f65a6927427f\", host=\"pz-dev\") # temporary host for test phase  "
    ]
   },
   {
