--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pz_server import PzServer, pz_plots\n",
+    "from pz_server import PzServer #, pz_plots\n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -101,12 +101,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server = PzServer(token=\"54d88903cb7efde2d9e82064a0ba02738cfcd5d4\", host=\"pz-dev\") # temporary host for test phase  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Get basic info from PZ Server\n",
     "\n",
-    "Besides providing access to data and metadata, the object `pz_server` also brings useful functions for users to navigate through the available contents. The functions with the preffix \"get_\" return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically out of the Jupyter environment (see the API documentatio here). Those with the preffix \"display_\" just show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html). For instance:\n",
+    "The Python object `pz_server` just created above can provide access to data and metadata stored in the PZ Server. It also brings useful methods for users to navigate through the available contents. The methods with the preffix \"get_\" return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically (see detaials on the [API documentation page](https://linea-it.github.io/pz-server-lib/html/index.html)). Those with the preffix \"display_\" just show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) (optimized for Jupyter Notebook). For instance:\n",
     "\n",
     "Display the list of product types supported with a short description;"
    ]
@@ -176,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The information about product type, users, and releases shown above can be used to filter the data products of interest for your search. For that, the function `list_products` receives as argument a dictionary mapping the products attributes to their values. "
+    "The information about product type, users, and releases shown above can be used to filter the data products of interest for your search. For that, the method `list_products` receives as argument a dictionary mapping the products attributes to their values. "
    ]
   },
   {
@@ -210,16 +219,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It also allows the search for multiple strings by adding the suffix `__or` (two underscores + \"or\") to the search key. For instance, to get spec-z catalogs and training sets in the same search:"
+    "It also allows the search for multiple strings by adding the suffix `__or` (two underscores + \"or\") to the search key. For instance, to get spec-z catalogs and training sets in the same search (notice that filtering is not case sensitive):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "pz_server.display_products_list(filters={\"product_type__or\": [\"Spec-z Catalog\", \"training set\"]}) # notice that filtering is not case sensitive "
+    "pz_server.display_products_list(filters={\"product_type__or\": [\"Spec-z Catalog\", \"training set\"]})"
    ]
   },
   {
@@ -247,7 +259,7 @@
     "\n",
     "---\n",
     "\n",
-    "Next, let's see examples of usage of the functions that starts with the preffixes \"get_\" and \"download_\" to retrie data (or metadata),  organized by product types. \n",
+    "Next, let's see examples of usage of the methods that starts with the preffixes \"get_\", \"display_\" and \"download_\" to retrieve data (or metadata), organized by product types. \n",
     "\n"
    ]
   },
@@ -301,7 +313,7 @@
     "\n",
     "All data products stored on PZ Server are identified by a unique number, the product **id** number, or by a _string_ called **internal_name**, which is created automatically by concatenating the product **id** to the product name given by its owner and removing blank spaces, upper cases, and special charecters. \n",
     "\n",
-    "The function `get_product_metadata()` returns (as a dictionary) the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name**."
+    "The methods `get_product_metadata()` returns (as a dictionary) the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name** (remove # to try out different ways of providing the product id). "
    ]
   },
   {
@@ -321,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the previous \"get_\" functions, there is a correspondent \"display_\" function for the product metadata: "
+    "As the previous \"get_\" methods, there is a correspondent \"display_\" method for the product metadata to show the same results, but as a table: "
    ]
   },
   {
@@ -339,7 +351,7 @@
    "source": [
     "#### Retrieve a given Spec-z Catalog \n",
     "\n",
-    "The function `get_product()` returns the Spec-z Catalog of interest as a _Pandas DataFrame_."
+    "The methods `get_product()` returns the data stored under a given product **id**. For simple tabular data (product types: Spec-z Catalog and Training Set), the methods returns an object of a class corresponding to the product type (classes: SpeczCatalog or TrainingSet), which are simple extensions of the class _pandas.DataFrame_ with some particular attributes and methods). Let's see an axample with a Spec-z Catalog:"
    ]
   },
   {
@@ -375,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `pz_server` library brings a couple of very basic in-built plot functions for a quick visualization of catalog properties. "
+    "The class `SpeczCatalog` brings a basic plot methods for quick visualization of catalog properties. "
    ]
   },
   {
@@ -384,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_plots.specz_plots(specz_catalog)"
+    "specz_catalog.plot()"
    ]
   },
   {
@@ -444,6 +456,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "metadata_train_set = pz_server.get_product_metadata(9)\n",
     "pz_server.display_product_metadata(\"14_goldenspike_train\") "
@@ -489,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the function `train_set_plots` for a quick visualization of training sets properties: "
+    "Use the methods `train_set_plots` for a quick visualization of training sets properties: "
    ]
   },
   {
@@ -543,7 +562,16 @@
    "source": [
     "#### Retrieve a given Photo-z Validation Results: download file\n",
     "\n",
-    "This product type is not necessarily (only) tabular data and can be a list of files. The function `get_product` shown above just return the data to be used on memory and only supports single tabular files. To retrieve Photo-z Validation Results, you must download the data to open locally. "
+    "This product type is not necessarily (only) tabular data and can be a list of files. The methods `get_product` shown above just return the data to be used on memory and only supports single tabular files. To retrieve Photo-z Validation Results, you must download the data to open locally. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.get_product(21)#, save_in=\".\")"
    ]
   },
   {
@@ -588,9 +616,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pz-server",
    "language": "python",
-   "name": "python3"
+   "name": "pz-server"
   },
   "language_info": {
    "codemirror_mode": {
@@ -602,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.0"
   },
   "vscode": {
    "interpreter": {
